tests/neg-custom-args/captures/bad-uses.scala
import caps.use
class Test:
  val bar = (@use c: Test) => () // error
